# Contour-Following

./: .gitignore  CMakeLists.txt  README.md  package.xml
env-hooks/: 10.template_lua_configure_paths.sh.develspace.in
launch/: kia_setup.launch  kia_setup_fake_joints.launch  load_setup_fake_joint_states_franka_panda.launch  load_setup_fake_joint_states_iiwa.launch  load_setup_fake_joint_states_kinova_gen3.launch  load_setup_fake_joint_states_lwr.launch  load_setup_fake_joint_states_ur10.launch  load_setup_franka_panda.launch  load_setup_iiwa.launch  load_setup_kinova_gen3.launch  load_setup_lwr.launch  load_setup_ur10.launch  load_setup_ur10_seac.launch
robot_description/: environment_config.rviz
robot_description/meshes/: Faceplate.stl  RoundPeg.stl  SCHUNK_EGH_80.stl  SquarePeg.stl  connection-ee-sensor.stl  dana_hub.stl  dana_rack.stl  gripper-ft_adapter.stl  sphere.stl  table.stl  tool_short.stl  torso.stl
robot_description/meshes/blender/: planar_collision.blend  planar_collision.blend1  planar_collision.mtl
robot_description/urdf/: environment.urdf.xacro
scripts/: show_obstacle.py  tf_viz.py
scripts/components/: force_simulation.lua  fsm_component.lua  lead_compensator.lua  schunk_egh80.lua  second_order_system.lua  simple_robot_sim.lua
scripts/deploy/: deploy_SEAC.lua
scripts/lib/: deployer_utils.lua  etasl_FT_JR3.lua  etasl_UR10.lua  etasl_dual_iiwa.lua  etasl_franka_panda.lua  etasl_iiwa.lua  etasl_kinova_gen3.lua  etasl_lwr.lua  load_positions.lua  motion_model.lua  utils_ts.lua
scripts/rfsm/: fsm_planar_contour_SEAC.lua
(+129 files in other folders)
